# saedb

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile-dev~  README.md  index.html  log-doxygen-dev.txt  params.json  saedb.doxygen  saedb.kdev4
.kdev4/: saedb.kdev4
cdt_build/: .cproject  .project  CMakeCache.txt  cmake_install.cmake
cdt_build/src/app/: Makefile  cmake_install.cmake
cmake/: SubDirList.cmake
computing/: CMakeLists.txt  computing.hpp  dumb.cpp  graph.hpp  ialgorithm.hpp
computing/aggregator/: aggregator.hpp
computing/engine/: engine_delegate.hpp  iengine.hpp  synchronous_engine.hpp
doc/html/: annotated.html  classes.html  dir_09eb85ee53b958e29bc67d850ce788f2.html  dir_128756013008978708900a229f73475c.html  dir_305e30b0d630cd3be6bbe160c74e4708.html  dir_5194e5fea318fda12687127c23f8aba1.html  dir_612bde9993956db044aa515d504204cc.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9940f05bddcca57b0992b204a013d8bd.html  dir_d0f3ab71628c4e2286acfe79518cfa44.html  files.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x76.html  functions_0x7e.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  hierarchy.html  index.html  (+6 more)
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  (+71 more)
doc/latex/: annotated.tex  dir_09eb85ee53b958e29bc67d850ce788f2.tex  dir_128756013008978708900a229f73475c.tex  dir_305e30b0d630cd3be6bbe160c74e4708.tex  dir_5194e5fea318fda12687127c23f8aba1.tex  dir_612bde9993956db044aa515d504204cc.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_9940f05bddcca57b0992b204a013d8bd.tex  dir_d0f3ab71628c4e2286acfe79518cfa44.tex  doxygen.sty  files.tex  hierarchy.tex  namespaces.tex  refman.tex
eclipse/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  pagerank
indexing/: CMakeLists.txt  README.md  analyzer.hpp  indexing.cpp  indexing.hpp  indexing_test.cpp  query.cpp  query.hpp  search.hpp
indexing/analyzer/: ArnetAnalyzer.h  CMakeLists.txt  CharTokenizer.h  Character.h  FilterBase.h  LetterTokenizer.h  LowerCaseFilter.h  LowerCaseTokenizer.h  StemFilter.cpp  StemFilter.h  StopFilter.cpp  StopFilter.h  Token.h  TokenFilter.h  TokenStream.h  TokenUtil.cpp  TokenUtil.h  Tokenizer.h
indexing/analyzer/StemmerLib/: common_lang_constants.h  english_stem.h  meta.h  punctuation.h  stemming.h  string_util.h  utilities.h
note/: graphlab.md
parallel/: his.cpp
serialization/: CMakeLists.txt  basic_types.hpp  iterator.hpp  list.hpp  map.hpp  oserializestream.hpp  serialization.hpp  serialization_test.cpp  set.hpp  string_convert.hpp  vector.hpp
src/: Engine.hpp  Graph.hpp  VertexAlgorithm.hpp  context.hpp  graph.hpp  graph_basic_types.cpp  helloworld.cpp  icontext.hpp  pagerank.cpp  sae_include.hpp  synchronous_engine.cpp
src/app/: CMakeLists.txt
src/app/demo/influence-maxmization/: CMakeLists.txt  DegreeDiscountInfMaxTest.cpp  Heap.cpp  Heap.h  Influencemaximization_old.cpp  LazyForwardInfMax.hpp  LazyForwardInfMaxTest.cpp  RandomGraphInfMaxTest.cpp  inf_max.cpp  inf_max.hpp  inf_max2.cpp  inf_max2.hpp  inf_max2_test.cpp  inf_max3.cpp  inf_max3.hpp  inf_max3_test.cpp  inf_max_test.cpp
src/app/demo/pagerank/: CMakeLists.txt  pagerank.cpp  pagerank.hpp  pagerank_test.cpp
src/app/graph_analysis/: CMakeLists.txt  TODO.md  create_app.py
src/app/graph_analysis/centrality/: CMakeLists.txt
src/app/graph_analysis/cliques/: CMakeLists.txt  cliques.cpp
src/app/graph_analysis/community/: CMakeLists.txt
src/app/graph_analysis/connected_component/: CMakeLists.txt  connected_component.cpp
src/app/graph_analysis/motifs/: CMakeLists.txt
src/app/graph_analysis/pagerank/: CMakeLists.txt  pagerank.cpp  pagerank1.cpp
src/app/graph_analysis/shortest_path/: CMakeLists.txt  shortest_path.cpp
src/app/graph_analysis/triangle/: CMakeLists.txt  triangle.cpp
src/app/graph_analysis/utils/: CMakeLists.txt
src/saedb/: .synchronous_engine.hpp.swp  CMakeLists.txt  context.hpp  engine.hpp  graph.hpp  graph_basic_types.hpp  graph_storage.hpp  ialgorithm.hpp  icontext.hpp  iengine.hpp  local_graph.hpp  pagerank.cpp  sae_include.hpp  sample_data.cpp  synchronous_engine.cpp  synchronous_engine.hpp  vertex_program.hpp
src/saedb/io/: CMakeLists.txt  graph.hpp  graph_builder.cpp  graph_builder.hpp  ifilterquery.hpp  mgraph.cpp  mgraph.hpp  mgraph_test.cpp  mmap_file.hpp  mmap_file_posix.cpp  mmap_test.cpp  type_info.cpp  type_info.hpp  type_info_test.cpp
src/saedb/util/: CMakeLists.txt  thread_pool.cpp  thread_pool.hpp  threadpool_test.cpp
src/utils/: create.py  create_app.py
storage/: CMakeLists.txt  graph_builder.cpp  graph_builder.hpp  mgraph.cpp  mgraph.hpp  mgraph_test.cpp  mmap_file_posix.cpp  mmap_file_win.cpp  mmap_test.cpp
streaming/: CMakeLists.txt  edge_counter.cpp  engine.cpp  engine.hpp  sgraph.cpp  sgraph.hpp  sgraph_format_csv.cpp  sgraph_format_edges.cpp  sgraph_main.cpp  streaming.hpp  trigger.hpp
testing/: CMakeLists.txt  testharness.cpp  testharness.hpp
toolkit/LDA/: CMakeLists.txt  env.cpp  env.hpp  lda.cpp  lda_instance.hpp  lda_test.cpp  malloc.hpp  readme.txt  sort.cpp  tokenize.cpp
toolkit/pagerank/: CMakeLists.txt  pagerank.hpp  pagerank_test.cpp
toolkit/wedge_sampler/: CMakeLists.txt  wedge_sampler.cpp
xcode-sae/IM2/: IM2.1  main.c
xcode-sae/IM3/: IM3.1  main.c
xcode-sae/Influence_Maximization/: Influence_Maximization.1
xcode-sae/influence_maximization/: influence_maximization.1
xcode-sae/memory_graph_test/: memory_graph_test.1
xcode-sae/pagerank/: pagerank.1
xcode-sae/xcode-sae.xcodeproj/: project.pbxproj
zrpc/: CMakeLists.txt  FindZeroMQ.cmake  rpc.proto  zrpc.cpp  zrpc.hpp
(+200 files in other folders)
