add_subdirectory(utils)
add_subdirectory(pagerank)
add_subdirectory(centrality)
add_subdirectory(cascades)
add_subdirectory(community)
add_subdirectory(shortest_path)
add_subdirectory(kcores)
add_subdirectory(triangle)
add_subdirectory(cliques)
add_subdirectory(connected_component)
add_subdirectory(motifs)
